force-app/main/default/objects/Registration_consultant__c/Registration_consultant__c.object-meta.xml
<CustomObject>
    <label>Registration consultant</label>
    <nameField>
        <label>Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>