force-app/main/default/objects/Registration_consultant__c/fields/Consultation_Scanning_charges__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Scanning_charges__c</fullName>
    <label>Consultation Scanning charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>