force-app/main/default/objects/Registration_consultant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_No__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>